ASN_5_BAD/parser.output
Terminals unused in grammar

   FIRSTOP
   CHSIGN
   SIZEOF
   LASTOP
   LASTTERM


State 0 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: precompList declList

    2 precompList: precompList PRECOMPILER
    3            | PRECOMPILER
    4            | %empty

    5 declList: declList decl
    6         | decl

    7 decl: varDecl
    8     | funDecl

    9 varDecl: typeSpec varDeclList ';'

   10 scopedVarDecl: STATIC typeSpec varDeclList ';'
   11              | typeSpec varDeclList ';'

   12 varDeclList: varDeclList ',' varDeclInit
   13            | varDeclInit

   14 varDeclInit: varDeclId
   15            | varDeclId ':' simpleExp

   16 varDeclId: ID
   17          | ID '[' NUMCONST ']'

   18 typeSpec: INT
   19         | BOOL
   20         | CHAR

   21 funDecl: typeSpec ID '(' parms ')' stmt
   22        | ID '(' parms ')' stmt

   23 parms: parmList
   24      | %empty

   25 parmList: parmList ';' parmTypeList
   26         | parmTypeList

   27 parmTypeList: typeSpec parmIdList

   28 parmIdList: parmIdList ',' parmId
   29           | parmId

   30 parmId: ID
   31       | ID '[' ']'

   32 stmt: matched
   33     | unmatched

   34 matched: IF simpleExp THEN matched ELSE matched
   35        | WHILE simpleExp DO matched
   36        | FOR ID '=' iterRange DO matched
   37        | expstmt
   38        | compoundstmt
   39        | returnstmt
   40        | breakstmt

   41 iterRange: simpleExp TO simpleExp
   42          | simpleExp TO simpleExp BY simpleExp

   43 unmatched: IF simpleExp THEN stmt
   44          | IF simpleExp THEN matched ELSE unmatched
   45          | WHILE simpleExp DO unmatched
   46          | FOR ID '=' iterRange DO unmatched

   47 expstmt: exp ';'
   48        | ';'

   49 compoundstmt: '{' localDecls stmtList '}'
   50             | compoundstmt ';'

   51 localDecls: localDecls scopedVarDecl
   52           | %empty

   53 stmtList: stmtList stmt
   54         | %empty

   55 returnstmt: RETURN ';'
   56           | RETURN exp ';'
   57           | RETURN error ';'

   58 breakstmt: BREAK ';'

   59 exp: mutable assignop exp
   60    | mutable INC
   61    | mutable DEC
   62    | simpleExp
   63    | mutable assignop error

   64 assignop: '='
   65         | ADDASS
   66         | SUBASS
   67         | MULASS
   68         | DIVASS

   69 simpleExp: simpleExp OR andExp
   70          | andExp

   71 andExp: andExp AND unaryRelExp
   72       | unaryRelExp

   73 unaryRelExp: NOT unaryRelExp
   74            | relExp

   75 relExp: minmaxExp relop minmaxExp
   76       | minmaxExp

   77 relop: LEQ
   78      | '<'
   79      | '>'
   80      | GEQ
   81      | EQ
   82      | NEQ

   83 minmaxExp: minmaxExp minmaxop sumExp
   84          | sumExp

   85 minmaxop: MAX
   86         | MIN

   87 sumExp: sumExp sumop mulExp
   88       | mulExp

   89 sumop: '+'
   90      | '-'

   91 mulExp: mulExp mulop unaryExp
   92       | unaryExp

   93 mulop: '*'
   94      | '/'
   95      | '%'

   96 unaryExp: unaryop unaryExp
   97         | factor

   98 unaryop: '-'
   99        | '*'
  100        | '?'

  101 factor: immutable
  102       | mutable

  103 mutable: ID
  104        | ID '[' exp ']'

  105 immutable: '(' exp ')'
  106          | call
  107          | constant

  108 call: ID '(' args ')'

  109 args: argList
  110     | %empty

  111 argList: argList ',' exp
  112        | exp

  113 constant: NUMCONST
  114         | CHARCONST
  115         | STRINGCONST
  116         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 95
'(' (40) 21 22 105 108
')' (41) 21 22 105 108
'*' (42) 93 99
'+' (43) 89
',' (44) 12 28 111
'-' (45) 90 98
'/' (47) 94
':' (58) 15
';' (59) 9 10 11 25 47 48 50 55 56 57 58
'<' (60) 78
'=' (61) 36 46 64
'>' (62) 79
'?' (63) 100
'[' (91) 17 31 104
']' (93) 17 31 104
'{' (123) 49
'}' (125) 49
error (256) 57 63
FIRSTOP (258)
ADDASS (259) 65
DIVASS (260) 68
MULASS (261) 67
SUBASS (262) 66
AND (263) 71
OR (264) 69
NOT (265) 73
CHSIGN (266)
SIZEOF (267)
EQ (268) 81
GEQ (269) 80
LEQ (270) 77
NEQ (271) 82
MIN (272) 86
MAX (273) 85
INC (274) 60
DEC (275) 61
PRECOMPILER (276) 2 3
LASTOP (277)
IF (278) 34 43 44
BOOL (279) 19
THEN (280) 34 43 44
ELSE (281) 34 44
FOR (282) 36 46
INT (283) 18
BY (284) 42
TO (285) 41 42
RETURN (286) 55 56 57
STATIC (287) 10
DO (288) 35 36 45 46
WHILE (289) 35 45
BREAK (290) 58
CHAR (291) 20
ID (292) 16 17 21 22 30 31 36 46 103 104 108
BOOLCONST (293) 116
NUMCONST (294) 17 113
CHARCONST (295) 114
STRINGCONST (296) 115
LASTTERM (297)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
precompList (63)
    on left: 2 3 4, on right: 1 2
declList (64)
    on left: 5 6, on right: 1 5
decl (65)
    on left: 7 8, on right: 5 6
varDecl (66)
    on left: 9, on right: 7
scopedVarDecl (67)
    on left: 10 11, on right: 51
varDeclList (68)
    on left: 12 13, on right: 9 10 11 12
varDeclInit (69)
    on left: 14 15, on right: 12 13
varDeclId (70)
    on left: 16 17, on right: 14 15
typeSpec (71)
    on left: 18 19 20, on right: 9 10 11 21 27
funDecl (72)
    on left: 21 22, on right: 8
parms (73)
    on left: 23 24, on right: 21 22
parmList (74)
    on left: 25 26, on right: 23 25
parmTypeList (75)
    on left: 27, on right: 25 26
parmIdList (76)
    on left: 28 29, on right: 27 28
parmId (77)
    on left: 30 31, on right: 28 29
stmt (78)
    on left: 32 33, on right: 21 22 43 53
matched (79)
    on left: 34 35 36 37 38 39 40, on right: 32 34 35 36 44
iterRange (80)
    on left: 41 42, on right: 36 46
unmatched (81)
    on left: 43 44 45 46, on right: 33 44 45 46
expstmt (82)
    on left: 47 48, on right: 37
compoundstmt (83)
    on left: 49 50, on right: 38 50
localDecls (84)
    on left: 51 52, on right: 49 51
stmtList (85)
    on left: 53 54, on right: 49 53
returnstmt (86)
    on left: 55 56 57, on right: 39
breakstmt (87)
    on left: 58, on right: 40
exp (88)
    on left: 59 60 61 62 63, on right: 47 56 59 104 105 111 112
assignop (89)
    on left: 64 65 66 67 68, on right: 59 63
simpleExp (90)
    on left: 69 70, on right: 15 34 35 41 42 43 44 45 62 69
andExp (91)
    on left: 71 72, on right: 69 70 71
unaryRelExp (92)
    on left: 73 74, on right: 71 72 73
relExp (93)
    on left: 75 76, on right: 74
relop (94)
    on left: 77 78 79 80 81 82, on right: 75
minmaxExp (95)
    on left: 83 84, on right: 75 76 83
minmaxop (96)
    on left: 85 86, on right: 83
sumExp (97)
    on left: 87 88, on right: 83 84 87
sumop (98)
    on left: 89 90, on right: 87
mulExp (99)
    on left: 91 92, on right: 87 88 91
mulop (100)
    on left: 93 94 95, on right: 91
unaryExp (101)
    on left: 96 97, on right: 91 92 96
unaryop (102)
    on left: 98 99 100, on right: 96
factor (103)
    on left: 101 102, on right: 97
mutable (104)
    on left: 103 104, on right: 59 60 61 63 102
immutable (105)
    on left: 105 106 107, on right: 101
call (106)
    on left: 108, on right: 106
args (107)
    on left: 109 110, on right: 108
argList (108)
    on left: 111 112, on right: 109 111
constant (109)
    on left: 113 114 115 116, on right: 107


State 0

    0 $accept: . program $end

    PRECOMPILER  shift, and go to state 1

    PRECOMPILER  [reduce using rule 4 (precompList)]
    $default     reduce using rule 4 (precompList)

    program      go to state 2
    precompList  go to state 3


State 1

    3 precompList: PRECOMPILER .

    $default  reduce using rule 3 (precompList)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: precompList . declList
    2 precompList: precompList . PRECOMPILER

    PRECOMPILER  shift, and go to state 5
    BOOL         shift, and go to state 6
    INT          shift, and go to state 7
    CHAR         shift, and go to state 8
    ID           shift, and go to state 9

    declList  go to state 10
    decl      go to state 11
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 precompList: precompList PRECOMPILER .

    $default  reduce using rule 2 (precompList)


State 6

   19 typeSpec: BOOL .

    $default  reduce using rule 19 (typeSpec)


State 7

   18 typeSpec: INT .

    $default  reduce using rule 18 (typeSpec)


State 8

   20 typeSpec: CHAR .

    $default  reduce using rule 20 (typeSpec)


State 9

   22 funDecl: ID . '(' parms ')' stmt

    '('  shift, and go to state 15


State 10

    1 program: precompList declList .
    5 declList: declList . decl

    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    CHAR  shift, and go to state 8
    ID    shift, and go to state 9

    $default  reduce using rule 1 (program)

    decl      go to state 16
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 11

    6 declList: decl .

    $default  reduce using rule 6 (declList)


State 12

    7 decl: varDecl .

    $default  reduce using rule 7 (decl)


State 13

    9 varDecl: typeSpec . varDeclList ';'
   21 funDecl: typeSpec . ID '(' parms ')' stmt

    ID  shift, and go to state 17

    varDeclList  go to state 18
    varDeclInit  go to state 19
    varDeclId    go to state 20


State 14

    8 decl: funDecl .

    $default  reduce using rule 8 (decl)


State 15

   22 funDecl: ID '(' . parms ')' stmt

    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    CHAR  shift, and go to state 8

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 21
    parms         go to state 22
    parmList      go to state 23
    parmTypeList  go to state 24


State 16

    5 declList: declList decl .

    $default  reduce using rule 5 (declList)


State 17

   16 varDeclId: ID .
   17          | ID . '[' NUMCONST ']'
   21 funDecl: typeSpec ID . '(' parms ')' stmt

    '['  shift, and go to state 25
    '('  shift, and go to state 26

    $default  reduce using rule 16 (varDeclId)


State 18

    9 varDecl: typeSpec varDeclList . ';'
   12 varDeclList: varDeclList . ',' varDeclInit

    ';'  shift, and go to state 27
    ','  shift, and go to state 28


State 19

   13 varDeclList: varDeclInit .

    $default  reduce using rule 13 (varDeclList)


State 20

   14 varDeclInit: varDeclId .
   15            | varDeclId . ':' simpleExp

    ':'  shift, and go to state 29

    $default  reduce using rule 14 (varDeclInit)


State 21

   27 parmTypeList: typeSpec . parmIdList

    ID  shift, and go to state 30

    parmIdList  go to state 31
    parmId      go to state 32


State 22

   22 funDecl: ID '(' parms . ')' stmt

    ')'  shift, and go to state 33


State 23

   23 parms: parmList .
   25 parmList: parmList . ';' parmTypeList

    ';'  shift, and go to state 34

    $default  reduce using rule 23 (parms)


State 24

   26 parmList: parmTypeList .

    $default  reduce using rule 26 (parmList)


State 25

   17 varDeclId: ID '[' . NUMCONST ']'

    NUMCONST  shift, and go to state 35


State 26

   21 funDecl: typeSpec ID '(' . parms ')' stmt

    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    CHAR  shift, and go to state 8

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 21
    parms         go to state 36
    parmList      go to state 23
    parmTypeList  go to state 24


State 27

    9 varDecl: typeSpec varDeclList ';' .

    $default  reduce using rule 9 (varDecl)


State 28

   12 varDeclList: varDeclList ',' . varDeclInit

    ID  shift, and go to state 37

    varDeclInit  go to state 38
    varDeclId    go to state 20


State 29

   15 varDeclInit: varDeclId ':' . simpleExp

    NOT          shift, and go to state 39
    '*'          shift, and go to state 40
    '-'          shift, and go to state 41
    '?'          shift, and go to state 42
    ID           shift, and go to state 43
    BOOLCONST    shift, and go to state 44
    NUMCONST     shift, and go to state 45
    CHARCONST    shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    '('          shift, and go to state 48

    simpleExp    go to state 49
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 59
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 30

   30 parmId: ID .
   31       | ID . '[' ']'

    '['  shift, and go to state 63

    $default  reduce using rule 30 (parmId)


State 31

   27 parmTypeList: typeSpec parmIdList .
   28 parmIdList: parmIdList . ',' parmId

    ','  shift, and go to state 64

    $default  reduce using rule 27 (parmTypeList)


State 32

   29 parmIdList: parmId .

    $default  reduce using rule 29 (parmIdList)


State 33

   22 funDecl: ID '(' parms ')' . stmt

    NOT          shift, and go to state 39
    '*'          shift, and go to state 40
    '-'          shift, and go to state 41
    '?'          shift, and go to state 42
    IF           shift, and go to state 65
    FOR          shift, and go to state 66
    RETURN       shift, and go to state 67
    WHILE        shift, and go to state 68
    BREAK        shift, and go to state 69
    ID           shift, and go to state 43
    BOOLCONST    shift, and go to state 44
    NUMCONST     shift, and go to state 45
    CHARCONST    shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    '('          shift, and go to state 48
    '{'          shift, and go to state 70
    ';'          shift, and go to state 71

    stmt          go to state 72
    matched       go to state 73
    unmatched     go to state 74
    expstmt       go to state 75
    compoundstmt  go to state 76
    returnstmt    go to state 77
    breakstmt     go to state 78
    exp           go to state 79
    simpleExp     go to state 80
    andExp        go to state 50
    unaryRelExp   go to state 51
    relExp        go to state 52
    minmaxExp     go to state 53
    sumExp        go to state 54
    mulExp        go to state 55
    unaryExp      go to state 56
    unaryop       go to state 57
    factor        go to state 58
    mutable       go to state 81
    immutable     go to state 60
    call          go to state 61
    constant      go to state 62


State 34

   25 parmList: parmList ';' . parmTypeList

    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    CHAR  shift, and go to state 8

    typeSpec      go to state 21
    parmTypeList  go to state 82


State 35

   17 varDeclId: ID '[' NUMCONST . ']'

    ']'  shift, and go to state 83


State 36

   21 funDecl: typeSpec ID '(' parms . ')' stmt

    ')'  shift, and go to state 84


State 37

   16 varDeclId: ID .
   17          | ID . '[' NUMCONST ']'

    '['  shift, and go to state 25

    $default  reduce using rule 16 (varDeclId)


State 38

   12 varDeclList: varDeclList ',' varDeclInit .

    $default  reduce using rule 12 (varDeclList)


State 39

   73 unaryRelExp: NOT . unaryRelExp
